--- a/motivation.tex
+++ b/motivation.tex
@@ -211,7 +211,7 @@ that
 term has been used in many ways}; another is
 \href{https://www.psychologytoday.com/blog/rabble-rouser/201512/is-stereotype-threat-overcooked-overstated-and-oversold}{questions
 about the replicability of key studies}. What \emph{is} clear is that we
-need to aovid thinking in terms of a deficit model (i.e., we need to
+need to avoid thinking in terms of a deficit model (i.e., we need to
 change the members of under-represented groups because they have some
 deficit, such as lack of prior experience) and instead use a systems
 approach (i.e., we need to change the system because it produces these
@@ -409,7 +409,7 @@ paper
 \cite{bib:lee-create-inclusive-community}
 is a brief, practical guide to
 doing that with references to the research literature. These help
-learners who belong to one or more margainalized or excluded groups, but
+learners who belong to one or more marginalized or excluded groups, but
 help motivate everyone else as well; while they are phrased in terms of
 term-long courses, many can be applied in our workshops, such as:
 
