--- a/novice.tex
+++ b/novice.tex
@@ -350,7 +350,7 @@ workshops because it takes people time to learn a new way to
 learn---time that we don't have in our compressed two-day format.
 \end{callout}
 
-\begin{challenge}{Modeling Novice Mental Models}{chal:modeling-novice-mental-models}
+\begin{challenge}{Modelling Novice Mental Models}{chal:modelling-novice-mental-models}
 
 Create a multiple choice question related to a topic you intend to teach
 and explain the diagnostic power of each its distractors, i.e., what
