--- a/performance.tex
+++ b/performance.tex
@@ -155,7 +155,7 @@ Barker et al found something similar in 2015 \cite{bib:barker-practice-adoption}
 Adoption is not a ``rational action,'' however, but an iterative series
 of decisions made in a social context, relying on normative traditions,
 social cueing, and emotional or intuitive processes\ldots{}
-{[}F{]}aculty are not likely to use educational research findings as the
+Faculty are not likely to use educational research findings as the
 basis for adoption decisions. Faculty become aware of innovative
 practices either because a problem leads them to intentionally seek them
 out, or they hear about them through funded initiatives, conferences and
