--- a/reference.tex
+++ b/reference.tex
@@ -350,7 +350,7 @@ factors.
 
 \item
   Stephen D. Brookfield and Stephen Preskill: \emph{{[}The
-Discussion Book{}{[}amazon-dicsussion{]}}.]
+Discussion Book{}{[}amazon-discussion{]}}.]
 Describes fifty different ways to get groups talking productively.
 
 \item
