--- a/book.tex
+++ b/book.tex
@@ -1,75 +1,10 @@
 \documentclass[11pt]{memoir}
-
-\setstocksize{9in}{6in}
-\settrimmedsize{\stockheight}{\stockwidth}{*}
-\settrims{0pt}{0pt}
-\setlxvchars
-\settypeblocksize{*}{\lxvchars}{1.618}
-\setlrmargins{*}{*}{1.618}
-\setulmargins{60pt}{*}{*}
-\setheaderspaces{*}{*}{1.618}
-\checkandfixthelayout
-
-\usepackage{geometry}
-\usepackage{framed}
-\usepackage{graphicx}
-
-\usepackage[T1]{fontenc}
-\usepackage{tgtermes}    % body font
-\usepackage{inconsolata} % fixed width font
-\usepackage{tgheros}     % sans-serif font
-
-\author{Greg Wilson}
-
-\geometry{
-  paperwidth=18.91cm,
-  paperheight=24.589cm,
-  vmargin=1.9cm, % top and bottom margins
-  inner=1.9cm, % inside margin
-  outer=2.29cm, % outside margin
-  bindingoffset=0.89cm % gutter
-}
-
-\setcounter{tocdepth}{0}    % sets what level of header is shown in the TOC
-\setcounter{secnumdepth}{1} % sets what level of subsect. are numbered
-
-\newenvironment{boxedsection}[3]
-{\begin{figure}[h!]\begin{framed}\centerline{{\textbf{{#1}: #2}}}\vspace{\baselineskip}}
-{\end{framed} \end{figure}}
-
-\newenvironment{callout}[2]{\begin{boxedsection}{Callout}{#1}{#2} }{ \end{boxedsection}}
-\newenvironment{checklist}[2]{\begin{boxedsection}{Checklist}{#1}{#2} }{ \end{boxedsection}}
-\newenvironment{challenge}[2]{\begin{boxedsection}{Challenge}{#1}{#2} }{ \end{boxedsection}}
-\newenvironment{discussion}[2]{\begin{boxedsection}{Discussion}{#1}{#2} }{ \end{boxedsection}}
-
-\newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
-
-\newcommand{\figlbl}[4][375pt]{\begin{figure}\centering\caption{#2}\label{#3}\includegraphics[width={#1}]{#4}\end{figure}}
-
-\newcommand{\fixme}[1]{\textbf{FIXME: {#1}}}
-
-\newcommand{\seclbl}[2]{\section{#1}\label{#2}}
-
-\newenvironment{tbllbl}[2]
-{\begin{table}\caption{#1}\label{#2}}
-{\end{table}}
-
-\newcommand{\chapref}[1]{Chapter~\ref{#1}}
-\newcommand{\href}[2]{#2\footnote{#1}}
-\newcommand{\secref}[1]{Section~\ref{#1}}
-\newcommand{\tblref}[1]{Table~\ref{#1}}
-
-\title{A Short Guide to Teaching}
-\date{}
-
-\linespread{1.3}
+\input{settings}
 
 \begin{document}
 
 \maketitle
-
 \newpage
-
 \tableofcontents
 
 \include{welcome}
