We have an intro (sort of)

--- a/book.tex
+++ b/book.tex
@@ -1,6 +1,9 @@
 \documentclass[11pt]{memoir}
 \input{settings}
 
+\title{A Short Guide to Teaching}
+\date{}
+
 \begin{document}
 
 \maketitle
@@ -33,6 +36,7 @@
 
 \appendix
 
+\include{conduct}
 \include{guide}
 \include{reference}
 
