--- a/practices.tex
+++ b/practices.tex
@@ -123,23 +123,10 @@ Some instructors use VPS over SSH or web browser pages instead. This
 solve the installation issues, but makes us dependent on host
 institutions' WiFi (which can be of highly variable quality), and has
 the issues mentioned above with things like keyboard shortcuts.
-\item[Collaborative note-taking.]
-We often use \href{http://etherpad.org}{Etherpad} for collaborative
-note-taking and to share snippets of code and small data files with
-learners. (If nothing else, it saves us from having to ask students to
-copy long URLs from the presenter's screen to their computers.) It is
-almost always mentioned positively in post-workshop feedback, and
-several workshop participants have started using it in their own
-teaching.
 
-One of the advantages of collaborative note-taking is that it gives the
-more advanced learners in the class something useful to do. Another is
-that the notes the learners take are usually more helpful \emph{to them}
-than those the instructor would prepare in advance, since the learners
-are more likely to write down what they actually found new, rather than
-what the instructor predicted would be new. Finally, scanning the
-Etherpad is a good way for an instructor to discover that the class
-didn't hear something important, or misunderstood it.
+\item[Collaborative note-taking.]
+\fixme{back ref to welcome - mention that boredom spreads}
+
 \item[Pair programming.]
 Pairing is a good practice in real life, and also a
 good way to teach \cite{bib:porter-what-works}. Partners can not only help each other out during the
@@ -168,58 +155,6 @@ guides are linked on each lesson page; the instructor guides for Data
 Carpentry lessons are on their
 main lesson page.
 \end{description}
-
-\seclbl{The Code of Conduct}{sec:the-code-of-conduct}
-
-Beyond the teaching practices and philosophies found in Software and
-Data Carpentry workshops, one of the most important characteristics of
-our workshops is that they be welcoming and safe spaces. Programming, or
-data management are scary topics to novices, and workshops are meant to
-be a judgment free space to learn and experiment. The behavior of the
-instructor and other participants may make more of an impression on a
-novice learner than any ``technical'' topic you teach.
-
-To support this mission Software Carpentry and Data Carpentry have a
-shared code of conduct that
-participants in our workshops are required to abide by. Hosts
-\emph{must} point people at it during registration, and instructors
-\emph{must} remind attendees of it at the start of the workshop. The
-Code of Conduct doesn't just tell everyone what the rules are: it tells
-them that there \emph{are} rules, and that they can therefore expect a
-safe and welcoming learning experience.
-
-\begin{description}
-\item[What's the purpose of a Code of Conduct?]
-A Code of Conduct cannot stop people from being offensive, any more than
-laws against theft stop people from stealing. What the CoC \emph{can} do
-is make expectations and consequences clear.
-\item[Do workshop participants ever actually violate the Code of
-Conduct?]
-Very rarely, but it has happened.
-\item[But what about free speech?]
-People are free to say what they want, but that doesn't mean they are
-free to say it in our workshops. As in any classroom, the instructor has
-the right to sanction students who are being disruptive.
-\item[What should I do if someone violates the Code of Conduct?]
-If you are an instructor, and believe that someone in a workshop has
-violated the Code of Conduct, you may warn them, ask them to apologize,
-and/or expel them, depending on the severity of the violation and
-whether or not you believe it was intentional. No matter what you choose
-to do, you should contact the appropriate Carpentry administrator at
-\texttt{admin@software-carpentry.org}
-as soon as you can, and describe what happened in the next online
-debriefing session that you're able to attend.
-
-You also have the right as an instructor to walk out of a workshop if
-you feel that the participants or hosts are not supporting your attempts
-to enforce the Code of Conduct. Again, please contact us as soon as
-possible if this happens.
-\end{description}
-
-A Code of Conduct is one way to create a safe learning space - making
-sure that you are properly motivating (and not de-motivating) your
-students is another. In our next module, we will talk in more detail
-about what we can do to support motivation in our learners.
 
 \begin{callout}{Why Not a MOOC?}{callout:why-not-a-mooc}
 
