Filling in a couple of fixmes in the welcome (32196 words).

--- a/welcome.tex
+++ b/welcome.tex
@@ -47,16 +47,19 @@ time it worked as I'd always hoped it would.  Cutting the number of
 lessons, shifting to in-person delivery, and using live coding instead
 of slides all had an impact, but what made the biggest difference was
 starting an instructor training course to turn learners into teachers.
-This class was inspired by Myles Horton's Highlander School, the
-Antigonish Movement in Eastern Canada, and hundreds of similar
-co-operative grassroots education projects going back nearly a
-century.
+This class was inspired by Myles Horton's Highlander School
+\cite{fixme}, the Antigonish Movement in Eastern Canada \cite{fixme},
+and dozens of similar co-operative grassroots efforts.
 
-Initially delivered online over multiple weeks, by 2014 I was teaching
-this class in two intensive days, just like our regular software
-skills workshops.  A year later, ``I'' became ``we'', as people who
-had been instructors for software skills workshops began training
-other instructors as well.
+While I initially delivered the course online over multiple weeks, by
+2014 I was teaching it in two intensive days, just like our regular
+software skills workshops.  A year later, ``I'' became ``we'' as
+people who had been instructors for regular workshops began training
+other instructors as well.  That same year, I began teaching half-day
+and one-day versions of the course to people outside Software
+Carpentry who wanted to help children, recent immigrants, women
+re-entering the workforce, and a wide variety of others learn how to
+make computers work for them.
 
 That course is the basis of this short guide.  Its aim is give you a
 quick, useful introductions to what we know about teaching and
@@ -85,9 +88,18 @@ learning and why we believe it is true.  We will look at:
 
 \end{itemize}
 
+\noindent
+We can't cover everything you need to know to teach well.  In fact,
+we can barely scratch the surface.  But we hope that what we show you
+will be useful, and will convince you that better is possible.
+
 \seclbl{Teaching Practices}{sec:welcome-practices}
 
-\fixme{intro}
+This book can be read on its own, but we believe it's more effective
+when used as part of an intensive in-person class.  Accordingly, we
+start by presenting two core teaching practices that you can use in
+such a class, as well as in whatever workshops you decide to teach
+yourself.
 
 \subseclbl{Have a Code of Conduct}{sec:have-conduct}
 
@@ -110,15 +122,6 @@ workshop. The Code of Conduct doesn't just tell everyone what the
 rules are: it tells them that there \emph{are} rules, and that they
 can therefore expect a safe and welcoming learning experience.
 
-A Code of Conduct cannot stop people from being offensive, any more
-than laws against theft stop people from stealing. What it \emph{can}
-do is make expectations and consequences clear.  In our experience,
-people rarely violate the Code of Conduct in person, though some are
-more likely to online, where they feel less inhibited.  And it is
-important to note that a Code of Conduct is \emph{not} an infringement
-on free speech.  People have a right to speak, but that doesn't mean
-they have a right to speak wherever they want to.
-
 If you are an instructor, and believe that someone in a workshop has
 violated the Code of Conduct, you may warn them, ask them to
 apologize, and/or expel them, depending on the severity of the
@@ -135,9 +138,21 @@ you do:
 
 \item
   Contact the organizer or host of your class as soon as you can and
-  describe what happened.
+  describe what happened.  Remember, a Code of Conduct is meaningless
+  without a procedure for enforcing it.
 
 \end{itemize}
+
+A Code of Conduct cannot stop people from being offensive, any more
+than laws against theft stop people from stealing. What it \emph{can}
+do is make expectations and consequences clear.  In our experience,
+people rarely violate the Code of Conduct in person, though some are
+more likely to online, where they feel less inhibited.  And remember,
+a Code of Conduct is \emph{not} an infringement on free speech.
+People have a right to say what they think, but that doesn't mean they
+have a right to speak wherever and whenever they want.  If someone
+wishes to say something disparaging about someone else, they can go
+and find a space of their own in which to say it.
 
 \subseclbl{Taking Notes Together}{sec:welcome-note-taking}
 
