Rewriting intro (32183 words)

--- a/welcome.tex
+++ b/welcome.tex
@@ -1,4 +1,19 @@
-\chaplbl{Introductions}{sec:intro}
+\chaplbl{Introductions}{sec:welcome}
+
+There's more to programming than typing in code.  Good programmers
+break their software up into functions, automate repetitive tasks,
+keep track of their work using version control, and write lots of
+little tests as they go along.
+
+Similarly, there's more to teaching than talking.  Good teachers break
+subjects up into digestible pieces, design lessons with verifiable
+goals in mind, check their students' progress at short intervals, and
+encourage collaboration and improvisation.  Like good programming
+techniques, these practices can be taught and learned, and pay off
+quickly and dramatically.  Adopting them won't automatically make you
+a great teacher, but they \emph{will} make you a better teacher.
+
+\seclbl{History}{sec:welcome-history}
 
 I started teaching people how to program in the late 1980s.  At first,
 I was pretty bad at: I went too fast, I used too much jargon, and I
@@ -6,9 +21,9 @@ assumed that my learners would be interested in the same things I was,
 for the same reasons.
 
 I got better over time, but that doesn't mean I was actually very
-good.  Yes, my students liked me, but studies have repeatedly shown
-that there's no correlation between how people rate a course and how
-much they really learn \cite{fixme}.  And even though I felt I was
+good.  My students seemed to like me, but studies have repeatedly
+shown that there's no correlation between how people rate a course and
+how much they really learn \cite{fixme}.  And even though I felt I was
 improving, I had no idea how effective I was compared to other
 teachers.  Did they spend the same hours sweating over their lectures
 that I did?  Did they have to revise each homework assignment half a
@@ -16,38 +31,26 @@ dozen times as students stumbled over omissions and contradictions?
 And how did they handle three guys in the back of the class playing
 poker online while they were lecturing?
 
-All my doubts came to a head after I left a faculty position at the
-University of Toronto in 2010 to re-start the Software Carpentry
-project.  Software Carpentry's aim was (and is) to teach scientists
-the equivalent of basic lab skills for research computing: how to
-automate repetitive tasks, how to break a program up into readable,
-testable functions, and how to use version control to track and share
-work.  Over the course of a year, I wrote two dozen multi-part lessons
-and recorded dozens of short videos to present that material online.
+My doubts came to a head after I re-launched the Software Carpentry
+project in 2010.  Its aim was (and is) to teach basic computing skills
+to researchers from a wide range of disciplines.  What I eventually
+realized was that, ironically, I was trying to teach people how to
+build and run software in efficient, repeatable ways, but was mostly
+ignorant of equivalent techniques for writing and delivering lessons.
 
-By the spring of 2011, it was clear that I was doing something wrong.
-I didn't know which lessons were effective and which weren't, and I
-knew even less about how my development methods stacked up against
-other people's.  Ironically, I was trying to teach people how to build
-and run software in efficient, repeatable ways, but was mostly ignorant of
-equivalent techniques for writing and delivering lessons.
-
-I had to take some time away from Software Carpentry at that point for
-family reasons, so I spent the second half of 2011 reading as widely
-as I could about educational psychology, instructional design, and the
-art and science of teaching.  Most of what I found was both dry and
-irrelevant, but there were plenty of gems hidden in the gravel.  Chief
-among them were Mark Guzdial's blog \cite{fixme} and the
-book \emph{How Learning Works} \cite{fixme}, both of which led me to
-the work of Lemov, Huston, Green, Fincher, and many others.  (See the
-bibliography for an annotated list of readings.)
+Luckily, I also discovered that as a species, we know as much about
+teaching and learning as we do about public health.  Mark Guzdial's
+blog \cite{fixme} and the book \emph{How Learning Works} \cite{fixme}
+led me to the work of Lemov, Huston, Green, Fincher, and others that
+showed me what would make my teaching better, and why I should believe
+it.  (See the bibliography for an annotated list of readings.)
 
 I restarted Software Carpentry once again in January 2012, and this
 time it worked as I'd always hoped it would.  Cutting the number of
 lessons, shifting to in-person delivery, and using live coding instead
 of slides all had an impact, but what made the biggest difference was
 starting an instructor training course to turn learners into teachers.
-This class was inspired by Myles Horton's Highlander School
+This approach was inspired by Myles Horton's Highlander School
 \cite{fixme}, the Antigonish Movement in Eastern Canada \cite{fixme},
 and dozens of similar co-operative grassroots efforts.
 
@@ -61,9 +64,11 @@ Carpentry who wanted to help children, recent immigrants, women
 re-entering the workforce, and a wide variety of others learn how to
 make computers work for them.
 
-That course is the basis of this short guide.  Its aim is give you a
-quick, useful introductions to what we know about teaching and
-learning and why we believe it is true.  We will look at:
+\seclbl{What We Will Cover}{sec:welcome-cover}
+
+That training course is the basis of this short guide.  Its aim is
+give you a quick, useful introductions to what we know about teaching
+and learning and why we believe it is true.  We will look at:
 
 \begin{itemize}
 
@@ -97,11 +102,10 @@ will be useful, and will convince you that better is possible.
 
 This book can be read on its own, but we believe it's more effective
 when used as part of an intensive in-person class.  Accordingly, we
-start by presenting two core teaching practices that you can use in
-such a class, as well as in whatever workshops you decide to teach
-yourself.
+start by presenting three practices that you can use while taking such
+a class, as well as in the workshops you teach yourself.
 
-\subseclbl{Have a Code of Conduct}{sec:have-conduct}
+\subseclbl{Have a Code of Conduct}{sec:welcome-conduct}
 
 An important part of making a class productive is to treat everyone
 with respect.  We therefore strongly recommend that every group
@@ -154,7 +158,7 @@ have a right to speak wherever and whenever they want.  If someone
 wishes to say something disparaging about someone else, they can go
 and find a space of their own in which to say it.
 
-\subseclbl{Taking Notes Together}{sec:welcome-note-taking}
+\subseclbl{Take Notes Together}{sec:welcome-notes}
 
 Many studies have shown that taking notes while learning improves
 retention, even if those notes are then thrown away \cite{fixme}.  As
@@ -209,7 +213,7 @@ to keep an eye on.  We believe the positives outweigh the negatives,
 but think that some careful controlled studies would tell us whether
 we're right, and how to use it better.
 
-\subseclbl{Assessing Learner Motivation and Prior Knowledge}{sec:welcome-assess}
+\subseclbl{Assess Learners' Motivation and Prior Knowledge}{sec:welcome-assess}
 
 It's important to design lessons with a particular audience in mind.
 It's equally important to find out who's in each specific audience,
